# openai_codex_test

./: .gitignore  CMakeLists.txt  README.md
apps/winui_whisper_transcriber/: CMakeLists.txt  README.md
apps/winui_whisper_transcriber/docs/: requirements.md
apps/winui_whisper_transcriber/src/: App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  SemanticTitleGenerator.cpp  SemanticTitleGenerator.h  TranscriptionService.cpp  TranscriptionService.h  pch.h
src/: main.cpp  main_loop.cpp
